// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`puppeteer > puppeteer 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2026": true,
      "node": true,
    },
    "ignorePatterns": [
      "**/node_modules",
      "**/build/",
      "**/lib/",
      "**/bin/",
      "**/*.tsbuildinfo",
      "**/*.api.json",
      "**/*.tgz",
      "**/yarn.lock",
      "**/.docusaurus/",
      "**/.cache-loader",
      "test/output-*/",
      "**/.dev_profile*",
      "**/coverage/",
      "**/generated/",
      "**/.eslintcache",
      "**/.cache/",
      "**/.vscode",
      "!.vscode/extensions.json",
      "!.vscode/*.template.json",
      "**/.devcontainer",
      "**/.DS_Store",
      "**/.env.local",
      "**/.env.development.local",
      "**/.env.test.local",
      "**/.env.production.local",
      "**/npm-debug.log*",
      "**/yarn-debug.log*",
      "**/yarn-error.log*",
      "**/.wireit",
      "**/assets/",
      "**/third_party/",
      "packages/ng-schematics/sandbox/**/*",
      "packages/ng-schematics/multi/**/*",
      "packages/ng-schematics/src/**/files/",
      "examples/puppeteer-in-browser/out/**/*",
      "examples/puppeteer-in-browser/node_modules/**/*",
      "examples/puppeteer-in-extension/out/**/*",
      "examples/puppeteer-in-extension/node_modules/**/*",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "@typescript-eslint/adjacent-overload-signatures": "error",
          "@typescript-eslint/array-type": [
            "error",
            {
              "default": "array-simple",
            },
          ],
          "@typescript-eslint/ban-ts-comment": "error",
          "@typescript-eslint/ban-tslint-comment": "error",
          "@typescript-eslint/class-literal-property-style": "error",
          "@typescript-eslint/consistent-generic-constructors": "error",
          "@typescript-eslint/consistent-indexed-object-style": "error",
          "@typescript-eslint/consistent-type-assertions": "error",
          "@typescript-eslint/consistent-type-definitions": [
            "error",
            "interface",
          ],
          "@typescript-eslint/consistent-type-imports": "error",
          "@typescript-eslint/explicit-function-return-type": "off",
          "@typescript-eslint/explicit-module-boundary-types": "error",
          "@typescript-eslint/no-confusing-non-null-assertion": "error",
          "@typescript-eslint/no-duplicate-enum-values": "error",
          "@typescript-eslint/no-empty-object-type": "error",
          "@typescript-eslint/no-explicit-any": "off",
          "@typescript-eslint/no-extra-non-null-assertion": "error",
          "@typescript-eslint/no-import-type-side-effects": "error",
          "@typescript-eslint/no-inferrable-types": "error",
          "@typescript-eslint/no-misused-new": "error",
          "@typescript-eslint/no-namespace": "error",
          "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
          "@typescript-eslint/no-non-null-assertion": "off",
          "@typescript-eslint/no-require-imports": "error",
          "@typescript-eslint/no-this-alias": "error",
          "@typescript-eslint/no-unnecessary-type-constraint": "error",
          "@typescript-eslint/no-unsafe-declaration-merging": "error",
          "@typescript-eslint/no-unsafe-function-type": "error",
          "@typescript-eslint/no-wrapper-object-types": "error",
          "@typescript-eslint/prefer-as-const": "error",
          "@typescript-eslint/prefer-for-of": "error",
          "@typescript-eslint/prefer-function-type": "error",
          "@typescript-eslint/prefer-namespace-keyword": "error",
          "@typescript-eslint/prefer-ts-expect-error": "error",
          "@typescript-eslint/triple-slash-reference": "error",
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-empty-function": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
          "no-use-before-define": "off",
          "no-with": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
        },
      },
      {
        "files": [
          "packages/puppeteer-core/src/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "paths": [],
              "patterns": [
                "*Events",
                "*.test.js",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "test/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "patterns": [
                "*src*",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "test/**/*.spec.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
        },
      },
    ],
    "plugins": [
      "unicorn",
      "import",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "getWithoutSet": false,
          "setWithoutGet": false,
        },
      ],
      "arrow-body-style": [
        "error",
        "always",
      ],
      "curly": [
        "error",
        "all",
      ],
      "eqeqeq": [
        "error",
      ],
      "import/no-cycle": [
        "error",
        {
          "maxDepth": Infinity,
        },
      ],
      "no-caller": "error",
      "no-cond-assign": "error",
      "no-debugger": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty-character-class": "error",
      "no-labels": "error",
      "no-multi-str": "error",
      "no-self-compare": "error",
      "no-shadow-restricted-names": "error",
      "no-unsafe-negation": "error",
      "no-unused-vars": [
        "error",
        {
          "args": "none",
          "vars": "local",
          "varsIgnorePattern": "([fx]?describe|[fx]?it|beforeAll|beforeEach|afterAll|afterEach)",
        },
      ],
      "no-var": "error",
      "no-with": "error",
      "prefer-const": "error",
      "radix": "error",
      "require-yield": "error",
      "valid-typeof": "error",
    },
  },
  "skipped": {
    "js-plugins": [
      "prettier/prettier",
      "mocha/no-exclusive-tests",
      "@stylistic/function-call-spacing",
      "@stylistic/semi",
      "@puppeteer/prettier-comments",
      "@puppeteer/extensions",
      "@puppeteer/check-license",
      "@puppeteer/use-using",
      "tsdoc/syntax",
      "mocha/no-pending-tests",
      "mocha/no-identical-title",
      "@puppeteer/no-quirks-mode-set-content",
    ],
    "not-implemented": [
      "no-implied-eval",
      "import/order",
      "no-restricted-syntax",
    ],
    "nursery": [
      "import/named",
      "no-unreachable",
      "getter-return",
      "no-undef",
      "@typescript-eslint/consistent-type-exports",
    ],
    "type-aware": [
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/return-await",
    ],
    "unsupported": [
      "spaced-comment",
      "new-parens",
      "max-len",
      "no-new-object",
      "no-octal-escape",
      "template-curly-spacing",
      "import/enforce-node-protocol-usage",
    ],
  },
  "warnings": [
    "Settings not migrated (not supported by oxlint): import/extensions, import/external-module-folders, import/parsers, import/resolver.",
    "Settings not migrated (not supported by oxlint): import/resolver.",
  ],
}
`;

exports[`puppeteer --js-plugins > puppeteer--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2026": true,
      "node": true,
    },
    "ignorePatterns": [
      "**/node_modules",
      "**/build/",
      "**/lib/",
      "**/bin/",
      "**/*.tsbuildinfo",
      "**/*.api.json",
      "**/*.tgz",
      "**/yarn.lock",
      "**/.docusaurus/",
      "**/.cache-loader",
      "test/output-*/",
      "**/.dev_profile*",
      "**/coverage/",
      "**/generated/",
      "**/.eslintcache",
      "**/.cache/",
      "**/.vscode",
      "!.vscode/extensions.json",
      "!.vscode/*.template.json",
      "**/.devcontainer",
      "**/.DS_Store",
      "**/.env.local",
      "**/.env.development.local",
      "**/.env.test.local",
      "**/.env.production.local",
      "**/npm-debug.log*",
      "**/yarn-debug.log*",
      "**/yarn-error.log*",
      "**/.wireit",
      "**/assets/",
      "**/third_party/",
      "packages/ng-schematics/sandbox/**/*",
      "packages/ng-schematics/multi/**/*",
      "packages/ng-schematics/src/**/files/",
      "examples/puppeteer-in-browser/out/**/*",
      "examples/puppeteer-in-browser/node_modules/**/*",
      "examples/puppeteer-in-extension/out/**/*",
      "examples/puppeteer-in-extension/node_modules/**/*",
    ],
    "jsPlugins": [
      "eslint-plugin-prettier",
      {
        "name": "eslint-js",
        "specifier": "@oxlint/plugin-eslint",
      },
      "eslint-plugin-mocha",
      "@stylistic/eslint-plugin",
      "@puppeteer/eslint-plugin",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
        ],
        "jsPlugins": [
          {
            "name": "eslint-js",
            "specifier": "@oxlint/plugin-eslint",
          },
          "@puppeteer/eslint-plugin",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "@puppeteer/use-using": "error",
          "@typescript-eslint/adjacent-overload-signatures": "error",
          "@typescript-eslint/array-type": [
            "error",
            {
              "default": "array-simple",
            },
          ],
          "@typescript-eslint/ban-ts-comment": "error",
          "@typescript-eslint/ban-tslint-comment": "error",
          "@typescript-eslint/class-literal-property-style": "error",
          "@typescript-eslint/consistent-generic-constructors": "error",
          "@typescript-eslint/consistent-indexed-object-style": "error",
          "@typescript-eslint/consistent-type-assertions": "error",
          "@typescript-eslint/consistent-type-definitions": [
            "error",
            "interface",
          ],
          "@typescript-eslint/consistent-type-imports": "error",
          "@typescript-eslint/explicit-function-return-type": "off",
          "@typescript-eslint/explicit-module-boundary-types": "error",
          "@typescript-eslint/no-confusing-non-null-assertion": "error",
          "@typescript-eslint/no-duplicate-enum-values": "error",
          "@typescript-eslint/no-empty-object-type": "error",
          "@typescript-eslint/no-explicit-any": "off",
          "@typescript-eslint/no-extra-non-null-assertion": "error",
          "@typescript-eslint/no-import-type-side-effects": "error",
          "@typescript-eslint/no-inferrable-types": "error",
          "@typescript-eslint/no-misused-new": "error",
          "@typescript-eslint/no-namespace": "error",
          "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
          "@typescript-eslint/no-non-null-assertion": "off",
          "@typescript-eslint/no-require-imports": "error",
          "@typescript-eslint/no-this-alias": "error",
          "@typescript-eslint/no-unnecessary-type-constraint": "error",
          "@typescript-eslint/no-unsafe-declaration-merging": "error",
          "@typescript-eslint/no-unsafe-function-type": "error",
          "@typescript-eslint/no-wrapper-object-types": "error",
          "@typescript-eslint/prefer-as-const": "error",
          "@typescript-eslint/prefer-for-of": "error",
          "@typescript-eslint/prefer-function-type": "error",
          "@typescript-eslint/prefer-namespace-keyword": "error",
          "@typescript-eslint/prefer-ts-expect-error": "error",
          "@typescript-eslint/triple-slash-reference": "error",
          "constructor-super": "off",
          "eslint-js/no-dupe-args": "off",
          "eslint-js/no-new-symbol": "off",
          "eslint-js/no-restricted-syntax": [
            "error",
            {
              "message": "\`require\` statements are not allowed. Use \`import\`.",
              "selector": "CallExpression[callee.name='require']",
            },
          ],
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-empty-function": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
          "no-use-before-define": "off",
          "no-with": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
        },
      },
      {
        "files": [
          "packages/puppeteer-core/src/**/*.ts",
        ],
        "jsPlugins": [
          {
            "name": "eslint-js",
            "specifier": "@oxlint/plugin-eslint",
          },
        ],
        "rules": {
          "eslint-js/no-restricted-syntax": [
            "error",
            {
              "message": "Use method \`Deferred.race()\` instead.",
              "selector": "MemberExpression[object.name="Promise"][property.name="race"]",
            },
            {
              "message": "Deferred \`valueOrThrow\` should not be called in \`Deferred.race()\` pass deferred directly",
              "selector": "CallExpression[callee.object.name="Deferred"][callee.property.name="race"] > ArrayExpression > CallExpression[callee.property.name="valueOrThrow"]",
            },
          ],
          "no-restricted-imports": [
            "error",
            {
              "paths": [],
              "patterns": [
                "*Events",
                "*.test.js",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "packages/**/*.ts",
        ],
        "jsPlugins": [
          "eslint-plugin-tsdoc",
        ],
        "rules": {
          "tsdoc/syntax": "error",
        },
      },
      {
        "files": [
          "test/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "patterns": [
                "*src*",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "test/**/*.spec.ts",
        ],
        "jsPlugins": [
          {
            "name": "eslint-js",
            "specifier": "@oxlint/plugin-eslint",
          },
          "eslint-plugin-mocha",
          "@puppeteer/eslint-plugin",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "@puppeteer/no-quirks-mode-set-content": "error",
          "eslint-js/no-restricted-syntax": [
            "error",
            {
              "message": "Use helper command \`launch\` to make sure the browsers get cleaned",
              "selector": "MemberExpression[object.name="puppeteer"][property.name="launch"]",
            },
            {
              "message": "Unexpected debugging mocha test.",
              "selector": "CallExpression[callee.object.name="it"] > MemberExpression > Identifier[name="deflake"], CallExpression[callee.object.name="it"] > MemberExpression > Identifier[name="deflakeOnly"]",
            },
            {
              "message": "No \`expect\` in EventHandler. They will never throw errors",
              "selector": "CallExpression[callee.property.name="on"] BlockStatement > :not(TryStatement) > ExpressionStatement > CallExpression[callee.object.callee.name="expect"]",
            },
          ],
          "mocha/no-identical-title": "error",
          "mocha/no-pending-tests": "error",
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
        },
      },
    ],
    "plugins": [
      "unicorn",
      "import",
    ],
    "rules": {
      "@puppeteer/check-license": "error",
      "@puppeteer/extensions": "error",
      "@puppeteer/prettier-comments": "error",
      "@stylistic/function-call-spacing": "error",
      "@stylistic/semi": "error",
      "accessor-pairs": [
        "error",
        {
          "getWithoutSet": false,
          "setWithoutGet": false,
        },
      ],
      "arrow-body-style": [
        "error",
        "always",
      ],
      "curly": [
        "error",
        "all",
      ],
      "eqeqeq": [
        "error",
      ],
      "eslint-js/max-len": [
        "error",
        {
          "code": 200,
          "comments": 90,
          "ignoreRegExpLiterals": true,
          "ignoreStrings": true,
          "ignoreTemplateLiterals": true,
          "ignoreUrls": true,
        },
      ],
      "eslint-js/new-parens": "error",
      "eslint-js/no-implied-eval": "error",
      "eslint-js/no-new-object": "error",
      "eslint-js/no-octal-escape": "error",
      "eslint-js/spaced-comment": [
        "error",
        "always",
        {
          "markers": [
            "*",
            "/",
          ],
        },
      ],
      "eslint-js/template-curly-spacing": [
        "error",
        "never",
      ],
      "import/no-cycle": [
        "error",
        {
          "maxDepth": Infinity,
        },
      ],
      "mocha/no-exclusive-tests": "error",
      "no-caller": "error",
      "no-cond-assign": "error",
      "no-debugger": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty-character-class": "error",
      "no-labels": "error",
      "no-multi-str": "error",
      "no-self-compare": "error",
      "no-shadow-restricted-names": "error",
      "no-unsafe-negation": "error",
      "no-unused-vars": [
        "error",
        {
          "args": "none",
          "vars": "local",
          "varsIgnorePattern": "([fx]?describe|[fx]?it|beforeAll|beforeEach|afterAll|afterEach)",
        },
      ],
      "no-var": "error",
      "no-with": "error",
      "prefer-const": "error",
      "prettier/prettier": "error",
      "radix": "error",
      "require-yield": "error",
      "valid-typeof": "error",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "import/order",
    ],
    "nursery": [
      "import/named",
      "no-unreachable",
      "getter-return",
      "no-undef",
      "@typescript-eslint/consistent-type-exports",
    ],
    "type-aware": [
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/return-await",
    ],
    "unsupported": [
      "import/enforce-node-protocol-usage",
    ],
  },
  "warnings": [
    "Settings not migrated (not supported by oxlint): import/extensions, import/external-module-folders, import/parsers, import/resolver.",
    "Settings not migrated (not supported by oxlint): import/resolver.",
  ],
}
`;

exports[`puppeteer --type-aware > puppeteer--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2026": true,
      "node": true,
    },
    "ignorePatterns": [
      "**/node_modules",
      "**/build/",
      "**/lib/",
      "**/bin/",
      "**/*.tsbuildinfo",
      "**/*.api.json",
      "**/*.tgz",
      "**/yarn.lock",
      "**/.docusaurus/",
      "**/.cache-loader",
      "test/output-*/",
      "**/.dev_profile*",
      "**/coverage/",
      "**/generated/",
      "**/.eslintcache",
      "**/.cache/",
      "**/.vscode",
      "!.vscode/extensions.json",
      "!.vscode/*.template.json",
      "**/.devcontainer",
      "**/.DS_Store",
      "**/.env.local",
      "**/.env.development.local",
      "**/.env.test.local",
      "**/.env.production.local",
      "**/npm-debug.log*",
      "**/yarn-debug.log*",
      "**/yarn-error.log*",
      "**/.wireit",
      "**/assets/",
      "**/third_party/",
      "packages/ng-schematics/sandbox/**/*",
      "packages/ng-schematics/multi/**/*",
      "packages/ng-schematics/src/**/files/",
      "examples/puppeteer-in-browser/out/**/*",
      "examples/puppeteer-in-browser/node_modules/**/*",
      "examples/puppeteer-in-extension/out/**/*",
      "examples/puppeteer-in-extension/node_modules/**/*",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "@typescript-eslint/adjacent-overload-signatures": "error",
          "@typescript-eslint/array-type": [
            "error",
            {
              "default": "array-simple",
            },
          ],
          "@typescript-eslint/ban-ts-comment": "error",
          "@typescript-eslint/ban-tslint-comment": "error",
          "@typescript-eslint/class-literal-property-style": "error",
          "@typescript-eslint/consistent-generic-constructors": "error",
          "@typescript-eslint/consistent-indexed-object-style": "error",
          "@typescript-eslint/consistent-type-assertions": "error",
          "@typescript-eslint/consistent-type-definitions": [
            "error",
            "interface",
          ],
          "@typescript-eslint/consistent-type-imports": "error",
          "@typescript-eslint/explicit-function-return-type": "off",
          "@typescript-eslint/explicit-module-boundary-types": "error",
          "@typescript-eslint/no-confusing-non-null-assertion": "error",
          "@typescript-eslint/no-duplicate-enum-values": "error",
          "@typescript-eslint/no-empty-object-type": "error",
          "@typescript-eslint/no-explicit-any": "off",
          "@typescript-eslint/no-extra-non-null-assertion": "error",
          "@typescript-eslint/no-floating-promises": [
            "error",
            {
              "ignoreIIFE": true,
              "ignoreVoid": true,
            },
          ],
          "@typescript-eslint/no-import-type-side-effects": "error",
          "@typescript-eslint/no-inferrable-types": "error",
          "@typescript-eslint/no-misused-new": "error",
          "@typescript-eslint/no-namespace": "error",
          "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
          "@typescript-eslint/no-non-null-assertion": "off",
          "@typescript-eslint/no-require-imports": "error",
          "@typescript-eslint/no-this-alias": "error",
          "@typescript-eslint/no-unnecessary-template-expression": "error",
          "@typescript-eslint/no-unnecessary-type-constraint": "error",
          "@typescript-eslint/no-unsafe-declaration-merging": "error",
          "@typescript-eslint/no-unsafe-function-type": "error",
          "@typescript-eslint/no-wrapper-object-types": "error",
          "@typescript-eslint/prefer-as-const": "error",
          "@typescript-eslint/prefer-for-of": "error",
          "@typescript-eslint/prefer-function-type": "error",
          "@typescript-eslint/prefer-namespace-keyword": "error",
          "@typescript-eslint/prefer-ts-expect-error": "error",
          "@typescript-eslint/return-await": [
            "error",
            "always",
          ],
          "@typescript-eslint/triple-slash-reference": "error",
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-empty-function": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
          "no-use-before-define": "off",
          "no-with": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
        },
      },
      {
        "files": [
          "packages/puppeteer-core/src/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "paths": [],
              "patterns": [
                "*Events",
                "*.test.js",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "packages/puppeteer-core/src/**/*.test.ts",
          "tools/mocha-runner/src/test.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "@typescript-eslint/no-floating-promises": "off",
        },
      },
      {
        "files": [
          "test/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "patterns": [
                "*src*",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "test/**/*.spec.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
        },
      },
    ],
    "plugins": [
      "unicorn",
      "import",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "getWithoutSet": false,
          "setWithoutGet": false,
        },
      ],
      "arrow-body-style": [
        "error",
        "always",
      ],
      "curly": [
        "error",
        "all",
      ],
      "eqeqeq": [
        "error",
      ],
      "import/no-cycle": [
        "error",
        {
          "maxDepth": Infinity,
        },
      ],
      "no-caller": "error",
      "no-cond-assign": "error",
      "no-debugger": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty-character-class": "error",
      "no-labels": "error",
      "no-multi-str": "error",
      "no-self-compare": "error",
      "no-shadow-restricted-names": "error",
      "no-unsafe-negation": "error",
      "no-unused-vars": [
        "error",
        {
          "args": "none",
          "vars": "local",
          "varsIgnorePattern": "([fx]?describe|[fx]?it|beforeAll|beforeEach|afterAll|afterEach)",
        },
      ],
      "no-var": "error",
      "no-with": "error",
      "prefer-const": "error",
      "radix": "error",
      "require-yield": "error",
      "valid-typeof": "error",
    },
  },
  "skipped": {
    "js-plugins": [
      "prettier/prettier",
      "mocha/no-exclusive-tests",
      "@stylistic/function-call-spacing",
      "@stylistic/semi",
      "@puppeteer/prettier-comments",
      "@puppeteer/extensions",
      "@puppeteer/check-license",
      "@puppeteer/use-using",
      "tsdoc/syntax",
      "mocha/no-pending-tests",
      "mocha/no-identical-title",
      "@puppeteer/no-quirks-mode-set-content",
    ],
    "not-implemented": [
      "no-implied-eval",
      "import/order",
      "no-restricted-syntax",
    ],
    "nursery": [
      "import/named",
      "no-unreachable",
      "getter-return",
      "no-undef",
      "@typescript-eslint/consistent-type-exports",
    ],
    "type-aware": [],
    "unsupported": [
      "spaced-comment",
      "new-parens",
      "max-len",
      "no-new-object",
      "no-octal-escape",
      "template-curly-spacing",
      "import/enforce-node-protocol-usage",
    ],
  },
  "warnings": [
    "Settings not migrated (not supported by oxlint): import/extensions, import/external-module-folders, import/parsers, import/resolver.",
    "Settings not migrated (not supported by oxlint): import/resolver.",
  ],
}
`;

exports[`puppeteer merge > puppeteer--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
      "es2026": true,
      "node": true,
    },
    "ignorePatterns": [
      "**/node_modules",
      "**/build/",
      "**/lib/",
      "**/bin/",
      "**/*.tsbuildinfo",
      "**/*.api.json",
      "**/*.tgz",
      "**/yarn.lock",
      "**/.docusaurus/",
      "**/.cache-loader",
      "test/output-*/",
      "**/.dev_profile*",
      "**/coverage/",
      "**/generated/",
      "**/.eslintcache",
      "**/.cache/",
      "**/.vscode",
      "!.vscode/extensions.json",
      "!.vscode/*.template.json",
      "**/.devcontainer",
      "**/.DS_Store",
      "**/.env.local",
      "**/.env.development.local",
      "**/.env.test.local",
      "**/.env.production.local",
      "**/npm-debug.log*",
      "**/yarn-debug.log*",
      "**/yarn-error.log*",
      "**/.wireit",
      "**/assets/",
      "**/third_party/",
      "packages/ng-schematics/sandbox/**/*",
      "packages/ng-schematics/multi/**/*",
      "packages/ng-schematics/src/**/files/",
      "examples/puppeteer-in-browser/out/**/*",
      "examples/puppeteer-in-browser/node_modules/**/*",
      "examples/puppeteer-in-extension/out/**/*",
      "examples/puppeteer-in-extension/node_modules/**/*",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "@typescript-eslint/adjacent-overload-signatures": "error",
          "@typescript-eslint/array-type": [
            "error",
            {
              "default": "array-simple",
            },
          ],
          "@typescript-eslint/ban-ts-comment": "error",
          "@typescript-eslint/ban-tslint-comment": "error",
          "@typescript-eslint/class-literal-property-style": "error",
          "@typescript-eslint/consistent-generic-constructors": "error",
          "@typescript-eslint/consistent-indexed-object-style": "error",
          "@typescript-eslint/consistent-type-assertions": "error",
          "@typescript-eslint/consistent-type-definitions": [
            "error",
            "interface",
          ],
          "@typescript-eslint/consistent-type-imports": "error",
          "@typescript-eslint/explicit-function-return-type": "off",
          "@typescript-eslint/explicit-module-boundary-types": "error",
          "@typescript-eslint/no-confusing-non-null-assertion": "error",
          "@typescript-eslint/no-duplicate-enum-values": "error",
          "@typescript-eslint/no-empty-object-type": "error",
          "@typescript-eslint/no-explicit-any": "off",
          "@typescript-eslint/no-extra-non-null-assertion": "error",
          "@typescript-eslint/no-import-type-side-effects": "error",
          "@typescript-eslint/no-inferrable-types": "error",
          "@typescript-eslint/no-misused-new": "error",
          "@typescript-eslint/no-namespace": "error",
          "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
          "@typescript-eslint/no-non-null-assertion": "off",
          "@typescript-eslint/no-require-imports": "error",
          "@typescript-eslint/no-this-alias": "error",
          "@typescript-eslint/no-unnecessary-type-constraint": "error",
          "@typescript-eslint/no-unsafe-declaration-merging": "error",
          "@typescript-eslint/no-unsafe-function-type": "error",
          "@typescript-eslint/no-wrapper-object-types": "error",
          "@typescript-eslint/prefer-as-const": "error",
          "@typescript-eslint/prefer-for-of": "error",
          "@typescript-eslint/prefer-function-type": "error",
          "@typescript-eslint/prefer-namespace-keyword": "error",
          "@typescript-eslint/prefer-ts-expect-error": "error",
          "@typescript-eslint/triple-slash-reference": "error",
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-empty-function": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
          "no-use-before-define": "off",
          "no-with": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
        },
      },
      {
        "files": [
          "packages/puppeteer-core/src/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "paths": [],
              "patterns": [
                "*Events",
                "*.test.js",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "test/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "patterns": [
                "*src*",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "test/**/*.spec.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
        },
      },
    ],
    "plugins": [
      "unicorn",
      "import",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "getWithoutSet": false,
          "setWithoutGet": false,
        },
      ],
      "eqeqeq": [
        "error",
      ],
      "import/no-cycle": [
        "error",
        {
          "maxDepth": Infinity,
        },
      ],
      "no-labels": "error",
      "no-multi-str": "error",
      "no-self-compare": "error",
      "no-unused-vars": [
        "error",
        {
          "args": "none",
          "vars": "local",
          "varsIgnorePattern": "([fx]?describe|[fx]?it|beforeAll|beforeEach|afterAll|afterEach)",
        },
      ],
      "no-var": "error",
      "prefer-const": "error",
      "radix": "error",
    },
  },
  "skipped": {
    "js-plugins": [
      "prettier/prettier",
      "mocha/no-exclusive-tests",
      "@stylistic/function-call-spacing",
      "@stylistic/semi",
      "@puppeteer/prettier-comments",
      "@puppeteer/extensions",
      "@puppeteer/check-license",
      "@puppeteer/use-using",
      "tsdoc/syntax",
      "mocha/no-pending-tests",
      "mocha/no-identical-title",
      "@puppeteer/no-quirks-mode-set-content",
    ],
    "not-implemented": [
      "no-implied-eval",
      "import/order",
      "no-restricted-syntax",
    ],
    "nursery": [
      "import/named",
      "no-unreachable",
      "getter-return",
      "no-undef",
      "@typescript-eslint/consistent-type-exports",
    ],
    "type-aware": [
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/return-await",
    ],
    "unsupported": [
      "spaced-comment",
      "new-parens",
      "max-len",
      "no-new-object",
      "no-octal-escape",
      "template-curly-spacing",
      "import/enforce-node-protocol-usage",
    ],
  },
  "warnings": [
    "Settings not migrated (not supported by oxlint): import/extensions, import/external-module-folders, import/parsers, import/resolver.",
    "Settings not migrated (not supported by oxlint): import/resolver.",
  ],
}
`;
